--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "lint": "next lint"
   },
   "prisma": {
-    "seed" : "ts-node prisma/seed.ts"
+    "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
     "@prisma/client": "^5.5.2",
+    "axios": "^1.6.1",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
