--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-modal": "^3.16.1",
+    "react-toastify": "^9.1.3",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
