--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@prisma/client": "^5.5.2",
     "axios": "^1.6.1",
+    "joi": "^17.11.0",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
