--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@prisma/client": "^5.6.0",
     "axios": "^1.6.1",
+    "hamburger-react": "^2.5.0",
     "joi": "^17.11.0",
     "next": "14.0.1",
     "react": "^18",
